Editor are using rest services now